# haskell_calculator

./: Calculator.hs  README.md  cabal.project  haskell-calculator.cabal  setup.py
