cabal-version:       >=1.10
name:                haskell-calculator
version:             0.1.0.0
build-type:          Simple
license:             MIT
author:              RYU
maintainer:          tanya@example.com
category:            GUI

executable haskell-calculator
  main-is:             Calculator.hs
  build-depends:       base >=4.7 && <5,
                       gi-gtk,
                       haskell-gi-base,
                       text
  default-language:    Haskell2010
